# icssc-discord-bot

./: Cargo.toml  README.md
entity/src/entities/: matchy_meetup_opt_in.rs  matchy_meetup_pair_member.rs  mod.rs  prelude.rs  snipe_opt_out.rs  social_team_pairing_entry.rs  social_team_pairing_group.rs  social_team_pairing_round.rs  spotting_message.rs  spotting_victim.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260331_171513_remove_old_tables.rs  m20260331_171625_create_teampair_table.rs
src/: handler.rs  main.rs  server.rs  setup.rs
src/attendance/: attended.rs  checkin.rs
src/matchy/: discord_helpers.rs  helpers.rs  matching.rs  send_pairing.rs
src/roster/: command.rs  mod.rs  pair_teams.rs  user_lookup.rs
src/routes/: mod.rs
src/spottings/: command.rs  history.rs  leaderboard.rs  log.rs  mod.rs  remove_spotting.rs  snipe.rs  socials_role.rs
src/util/: gdrive.rs  gsheets.rs  mod.rs  paginate.rs  roster.rs
