[package]
name = "icssc-discord-bot"
version = "1.0.0"
edition = "2024"
rust-version = "1.92.0"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["cargo"] }
discord-md = "3.0.0"
dotenvy = "0.15.7"
entity = { path = "entity" }
env_vars_struct = { git = "https://github.com/laggycomputer/env_vars_struct" }
itertools = "0.14.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
migration = { path = "migration" }
petgraph = "0.8.3"
pluralizer = "0.5.0"
poise = "0.6.1"
rand = "0.9.2"
rand_chacha = "0.9.0"
regex = "1.12.3"
reqwest = { version = "0.13.1", features = ["form", "json", "query"] }
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio", "macros", "with-chrono"] }
serde = "1.0.228"
serde_json = "1.0.149"
serenity = { version = "0.12.5", features = ["full"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
urlencoding = "2.1.3"

[lints.rust]
ambiguous_negative_literals = "warn"
deref_into_dyn_supertrait = "warn"
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
let_underscore_lock = "deny"
linker_messages = "warn"
macro_use_extern_crate = "deny"
map_unit_fn = "deny"
non_ascii_idents = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
redundant_semicolons = "deny"
trivial_numeric_casts = "warn"
unit_bindings = "deny"
unnameable_types = "warn"
unsafe_attr_outside_unsafe = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_unsafe = "deny"
variant_size_differences = "warn"

[lints.clippy]
allow_attributes = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_lossless = "warn"
cast_ptr_alignment = "deny"
cfg_not_test = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
comparison_chain = "warn"
copy_iterator = "warn"
deref_by_slicing = "warn"
doc_broken_link = "deny"
doc_link_with_quotes = "warn"
elidable_lifetime_names = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
enum_glob_use = "warn"
error_impl_error = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filetype_is_file = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp = "deny"
fn_to_numeric_cast_any = "warn"
format_collect = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
ignore_without_reason = "warn"
impl_trait_in_params = "deny"
implicit_clone = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
ip_constant = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_ilog2 = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
mismatching_type_param_order = "deny"
missing_assert_message = "warn"
multiple_inherent_impl = "warn"
needless_bitwise_bool = "warn"
needless_pass_by_value = "warn"
needless_type_cast = "warn"
negative_feature_names = "warn"
non_zero_suggestions = "warn"
option_as_ref_cloned = "warn"
partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ptr_offset_by_literal = "warn"
pub_underscore_fields = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
rc_mutex = "deny"
redundant_closure_for_method_calls = "warn"
redundant_feature_names = "warn"
redundant_type_annotations = "warn"
ref_as_ptr = "warn"
ref_binding_to_reference = "warn"
ref_option = "warn"
ref_option_ref = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_functions_in_if_condition = "warn"
same_name_method = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
str_to_string = "warn"
transmute_ptr_to_ptr = "deny"
trivially_copy_pass_by_ref = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "deny"
unicode_not_nfc = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"
unnecessary_wraps = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unused_async = "warn"
unused_result_ok = "warn"
unused_self = "warn"
unused_trait_names = "deny"
used_underscore_binding = "deny"
used_underscore_items = "deny"
verbose_bit_mask = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "deny"
zero_sized_map_values = "deny"
